--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 color: blue;
 }
 .container{
-    border: green solid 1px;
+    border: green;
 } 
 .asteroid, .asteroid-b326, .asteroid-b329-big{
     font-weight: bold;
